changed picture from kevin corrected white text which caused links to be invisible on white backgrounds.

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -102,7 +102,7 @@ zoom: 1;
 .flex-control-thumbs li {width: 25%; float: left; margin: 0;}
 .flex-control-thumbs img {width: 100%; display: block; opacity: .7; cursor: pointer;}
 .flex-control-thumbs img:hover {opacity: 1;}
-.flex-control-thumbs .flex-active {opacity: 1; cursor: default;}
+.flex-control-thumbs .flex-active {opacity: 100; cursor: default;}
 
 @media screen and (max-width: 860px) {
   .flex-direction-nav .flex-prev {opacity: 1; left: 0;}
